components/devfile-sample-code-with-quarkus/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: test-application
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: devfile-sample-code-with-quarkus
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: eldevfile-sample-code-with-quarkus
  namespace: test-100
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-devfile-sample-code-with-quarkus
    weight: null
status: {}
